# sensor-logger

./: .gitignore  CMakeLists.txt  README.md
include/: slog.h
src/: slog.c
test/: CMakeLists.txt  test_sensor_logger.c
